add hackathon base config